# fastapi_training_app

./: .gitignore  README.md  start.sh  stop.sh  stop_rm_docker_tmp_files.sh
scripts/: create_docker_tmp_files.sh  (+1 more)
src/: .env  (+2 more)
src/backend/: .dockerignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
src/backend/.docker/broker/rabbit_mq/: Dockerfile
src/backend/.docker/broker/rabbit_mq/config/: rabbitmq.conf
src/backend/.docker/cache/redis/: Dockerfile
src/backend/.docker/cache/redis/config/: redis.conf
src/backend/.docker/cache/redis/scripts/: entrypoint.sh
src/backend/.docker/databases/mssql/: Dockerfile
src/backend/.docker/databases/mssql/config/: init-db.sql  restore.sql
src/backend/.docker/databases/mssql/scripts/: entrypoint.sh  init-db-run.sh
src/backend/.docker/monitor/flower/: Dockerfile  requirements.txt
src/backend/.docker/worker/celery/: Dockerfile  requirements.txt
src/backend/backend_db/mssql/scripts/: init-db-run.sh
src/backend/db/mssql/: Dockerfile
src/backend/db/mssql/scripts/: init-db-run.sh  init-db.sql  setup.instance.sql
src/backend/scripts/: activate-venv.sh  start_venv.sh
src/backend/tests/: test_training_app.py
src/backend/training_app/: __init__.py  __main__.py  main.py
src/backend/training_app/alembic/: env.py
src/backend/training_app/api/: __init__.py
src/backend/training_app/api/api_v1/operations/: schemas.py  views.py
src/backend/training_app/api/v1/operations/: views.py
src/backend/training_app/api/v1/products/: crud.py  dependencies.py  views.py
src/backend/training_app/auth/: __init__.py  base_config.py  manager.py  schemas.py  views.py
src/backend/training_app/celery/: app.py  config.py  worker.py
src/backend/training_app/celery_worker/: app.py  config.py  worker.py
src/backend/training_app/core/db/mssql/: config.py  db_connect.py
src/backend/training_app/core/db/mssql/utils/: __init__.py  get_string_connect_db_url.py  string_connect_db_url.py  utilit_db_connect.py
src/backend/training_app/core/db/redis_cache/: init_redis_cache.py
src/backend/training_app/core/models/: __init__.py  base.py  operation.py  role.py  user.py
