[tool.poetry]
name = "training-app"
version = "0.1.0"
description = ""
authors = ["kolesnikovvitaliy <kolesnikovvitaliy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pendulum = "3.0.0b1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
